--- a/templates/about.html
+++ b/templates/about.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>about</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1> About Page </h1>
-</body>
-</html>
+{% endblock content %}
+
