--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -11,7 +11,7 @@
                         {{ form.email(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.email.errors %}
-                                <spa>{{ error }}</spa>
+                                <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
@@ -24,7 +24,7 @@
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.password.errors %}
-                                <spa>{{ error }}</spa>
+                                <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
