--- a/flaskblog/templates/create_post.html
+++ b/flaskblog/templates/create_post.html
@@ -33,7 +33,7 @@
             </div>
         </fieldset>
         <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info") }}
+            {{ form.post_button(class="btn btn-outline-info") }}
         </div>
     </form>
 </div>
