--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -59,7 +59,7 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.sign_up_button(class="btn btn-outline-info") }}
             </div>
         </form>
     </div>
