--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <form action="{{ url_for('delete_account', user_id=current_user.id) }}" method="POST">
+                            <form action="{{ url_for('users.delete_account', user_id=current_user.id) }}" method="POST">
                                 <input class="btn btn-danger" type="submit" value="Delete">
                             </form>
                         </div>
